test/spec_vectors/simd_splat/fail/module_17.wat
(module (func (result v128) f64x2.splat (f32.const 0.0)))